Fix Dings-Name and add Definition

--- a/27.md
+++ b/27.md
@@ -1,4 +1,8 @@
-# Echo Bug
+# Echo-Bug
+
+The Echo-Bug is a [Bug](60074.md).
+
+## Description
 
 Everytime when I execute the [mmls](33.md#mmls) command, a new file "echo" is created.
 
