--- a/41.md
+++ b/41.md
@@ -1,3 +1,3 @@
 # Vim
 
-The Vim Editor, also known as "Vi IMproved" was first published by [Bram Moolenaar](40.md) in 1988.
+The Vim Editor is an [Editor](2000252.md), that is also known as "Vi IMproved" and was first published by [Bram Moolenaar](40.md) in 1988.
