--- a/4.md
+++ b/4.md
@@ -1,6 +1,6 @@
 # Holyheu@Clash-Of-Clans
 
-Holyheu@Clash-Of-Clans the [Avatar](170000000.md) of [Michael Holzheu](0.md) in the Online-Game [Clash-Of-Clans](3.md).
+Holyheu@Clash-Of-Clans the [Avatar](170000000.md) of [Michael_Holzheu](0.md) in the Online-Game [Clash-Of-Clans](3.md).
 
 ## Links
 
