--- a/60126.md
+++ b/60126.md
@@ -1,3 +1,3 @@
 # Translation
 
-Translation is ...
+Translation is [Transformation](600164.md) of [Information](650025.md) regarding the [Encoding](600041.md).
