--- a/60079.md
+++ b/60079.md
@@ -1,3 +1,3 @@
 # Encoding
 
-Encoding is a [Relation](60005.md) between [Things](60003.md) of tho [Sets](60004.md) with the [Goal](60058.md) of [Generalization](60080).md).
+Encoding is a [Relation](60005.md) between [Things](60003.md) of tho [Sets](60004.md) with the [Goal](60058.md) of [Generalization](60080.md).
