--- a/60003.md
+++ b/60003.md
@@ -1,3 +1,3 @@
 # Thing
 
-A thing is either indivisable or consists out of a [Set](60004.md) of other Things.
+A Thing is a [Set](60004.md) of other [Things](60003.md).
