--- a/200040016.md
+++ b/200040016.md
@@ -4,4 +4,4 @@ The-100 is a [Movie-Series](200300003.md).
 
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/The_100_(TV_series)
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/The_100_(TV_series))
