--- a/270000009.md
+++ b/270000009.md
@@ -1,3 +1,3 @@
 # Human-Creation-Genre
 
-A Human-Creation-Genre is a [Type]() of a [Human-Creation](270000008.md).
+A Human-Creation-Genre is a [Type](60107.md) of a [Human-Creation](270000008.md).
