--- a/2000254.md
+++ b/2000254.md
@@ -1,3 +1,7 @@
 # Node-Js
 
 Node-Js is a [Runtime-Environment](250000013) for [Java-Script](9010007.md).
+
+## Links
+
+- Wikpedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Node.js)
