--- a/8020002.md
+++ b/8020002.md
@@ -5,7 +5,9 @@ The Kraftfahrt-Bundes-Amt is an [Institution](600097.md) in the [German-System](
 ## About
 
 - My [Abbreviation](210000000.md) is [Kba](8020002.md)
+- My [Seat](670044.md) is in [Flensburg](140000090.md).
 - I am [Part](60084.md) of the [Traffics-System](1100000001.md) in [Germany](140000025.md).
+- I am the [Owner](670045.md) of the [Fahreignungs-Register](8020003.md)
 
 ## Links
 
