--- a/70000041.md
+++ b/70000041.md
@@ -1,3 +1,12 @@
 # Leslie_Lamport
 
 Leslie_Lamport is a [Human](40000001.md).
+
+## About
+
+- I am a [Creator](600098.md) of [LaTeX](9300010.md)
+- I am a [Winner](404.md) of the [Turing-Award](640025.md)
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Leslie_Lamport)
