--- a/60161.md
+++ b/60161.md
@@ -1,3 +1,8 @@
 # Synchronicity
 
 Synchronicity is a [Process](60062.md) that works according to a [Plan](600045.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Synchronicity)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q1121101)
