--- a/60161.md
+++ b/60161.md
@@ -2,6 +2,10 @@
 
 Synchronicity is a [Process](60062.md) that works according to a [Plan](600045.md).
 
+## About
+
+- I am a [Concept](600011.md) of a [Spiritism-System](14100003.md)
+
 ## Links
 
 - Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Synchronicity)
