--- a/300100001.md
+++ b/300100001.md
@@ -201,6 +201,10 @@ There are three Security-Levels:
 
 - [Over-Tone-App](23.md#10500)
 
+### Education <a id="4042"/>
+
+While creating your own Dings-Universe, the Brain is synchronized with the Dings-Network.
+
 ### Creative-Work <a id="4070"/>
 
 Already available Dings-Objects, like Sound, Images or Videos can be re-combined with new Objects. The Dings-System provides Tools, that only save the Transformation-Operations, which keeps the Project-Files small. For Dings-Objects only References are used - Therefore each Object is only once on your Hard-Drive.
