--- a/300100001.md
+++ b/300100001.md
@@ -201,9 +201,13 @@ There are three Security-Levels:
 
 - [Over-Tone-App](23.md#10500)
 
-### Education <a id="4042"/>
+### Learning <a id="4042"/>
 
-While creating your own Dings-Universe, the Brain is synchronized with the Dings-Network.
+While creating your own Dings-Universe, the Brain is synchronized with the Dings-Network. Things that you have definied and written down by yourself can be remembered and understood better.
+
+### Diary <a id="4043"/>
+
+Becuase Time is also stored in the Block-Chain, the Dings-System is used as Diary.
 
 ### Creative-Work <a id="4070"/>
 
