Add About and Links

--- a/50000028.md
+++ b/50000028.md
@@ -1,3 +1,12 @@
 # Crispin_Hellion_Glover
 
 Crispin_Hellion_Glover is a [Human](40000001.md) and an [Actor](202000010.md).
+
+## About
+
+- I am an [Actor](202000010.md) in the [Back-to-the-Future-Series](200040005.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Crispin_Glover)
+- Wikidata: [https://wikidata.org](https://www.wikidata.org/wiki/Q310060)
