Add About and Links

--- a/70000025.md
+++ b/70000025.md
@@ -1,3 +1,12 @@
 # Michael_Andrew_Fox
 
-Michael_Andrew_Fox is a [Human](40000001.md) and an [Actor](202000010.md).
+Michael_Andrew_Fox is a [Human](40000001.md).
+
+## About
+
+- I am an [Actor](202000010.md) in the [Back-to-the-Future-Series](200040005.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Michael_J._Fox)
+- Wikidata: [https://wikidata.org](https://www.wikidata.org/wiki/Q395274)
