--- a/70000026.md
+++ b/70000026.md
@@ -1,3 +1,12 @@
 # Christopher_Allen_Lloyd
 
-Christopher_Allen_Lloyd is a [Human](40000001.md) and an [Actor](202000010.md).
+Christopher_Allen_Lloyd is a [Human](40000001.md).
+
+## About
+
+- I am an [Actor](202000010.md) in the [Back-to-the-Future-Series](200040005.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Christopher_Lloyd)
+- Wikidata: [https://wikidata.org](https://www.wikidata.org/wiki/Q109324)
