--- a/2000254.md
+++ b/2000254.md
@@ -12,3 +12,4 @@ Node-Js is a [Runtime-Environment](250000013.md) for [Java-Script](9010007.md).
 ## Links
 
 - Wikpedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Node.js)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q756100)
