--- a/70000090.md
+++ b/70000090.md
@@ -1,13 +1,10 @@
-# Alicia-Christian_Foster
+# Carl_Bechstein
 
-Alicia-Christian_Foster is a [Human](40000001.md).
+Carl_Bechstein is a [Human](40000001.md).
 
 ## About
 
-- I am an [Actor](202000010.md) in [Flightplan](200040033.md).
-- My [Nick-Name](270000029.md) is [Jodie](404.md).
-
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Jodie_Foster)
-- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q41351)
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Carl_Bechstein)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q69789)
