--- a/240000041.md
+++ b/240000041.md
@@ -4,6 +4,7 @@ C-Bechstein-Pianoforte is a [Corporation](240000000.md).
 
 ## About
 
+- My [Official-Name](611003.md) is [C. Bechstein Pianoforte](240000041.md)
 - I am a [Manufacturer](600098.md) of [Pianos](90000045.md)
 
 ## Links
