--- a/70000091.md
+++ b/70000091.md
@@ -4,6 +4,8 @@ Carl_Bechstein is a [Human](40000001.md).
 
 ## About
 
+- I am the [Founder](600098.md) of [C-Bechstein-Pianoforte](240000041.md)
+
 ## Links
 
 - Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Carl_Bechstein)
