Add About and Links

--- a/90000045.md
+++ b/90000045.md
@@ -1,3 +1,12 @@
 # Piano
 
 A Piano is a [Music-Instrument](90000020.md).
+
+## About
+
+- I am a [Successor](60133.md) of the [Harpsicord](90000046.md).
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Piano)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q5994)
