--- a/16000004.md
+++ b/16000004.md
@@ -1,3 +1,3 @@
-# Wave-Modulation
+# Wave-Modulation (DEAD)
 
-Wave-Modulation is a [Physical-Process](10000042.md) for [Modification](600164.md) of a [Wave](60156.md).
+This Number-File is no longer maintained, [here](10000088.md) you can find its living Gemini.
