Beatify Dings-Name

--- a/20000036.md
+++ b/20000036.md
@@ -1,6 +1,6 @@
-# Key-Board
+# Keyboard
 
-A Key-Board is an [Input-Device](20000036.md).
+A Keyboard is an [Input-Device](20000036.md).
 
 ## About
 
