--- a/2010046.md
+++ b/2010046.md
@@ -9,6 +9,10 @@ The Bechstein-Center-Tübingen is a [Shop](200000007.md).
 - My [Seat](670044.md) is [Tübingen](2000001.md).
 - I am a [Shop](200000007.md) for [Pianos](90000045.md).
 
+## Photos
+
+![At the Entrance](400000228.jpg)
+
 ## Links
 
 - Home-Page: [https://www.bechstein.com](https://www.bechstein.com/centren/tuebingen)
