--- a/2010046.md
+++ b/2010046.md
@@ -5,7 +5,7 @@ The Bechstein-Center-Tübingen is a [Shop](200000007.md).
 ## About
 
 - My [Official-Name](611003.md) is [C. Bechstein Centrum Tübingen](2010046.md).
-- My [Name](60048.md) has a [Relation](60005.md) to [Carl_Bechstein](70000091.md).
+- My [Name](60048.md) is from [Carl_Bechstein](70000091.md).
 - My [Seat](670044.md) is [Tübingen](2000001.md).
 - I am a [Shop](200000007.md) for [Pianos](90000045.md).
 
