--- a/2010046.md
+++ b/2010046.md
@@ -6,7 +6,7 @@ The Bechstein-Center-Tübingen is a [Shop](200000007.md).
 
 - My [Official-Name](611003.md) is [C. Bechstein Centrum Tübingen](2010046.md).
 - My [Name](60048.md) is from [Carl_Bechstein](70000091.md).
-- My [Seat](670044.md) is [Tübingen](2000001.md).
+- My [Seat](670044.md) is in [Tübingen](2000001.md).
 - I am a [Shop](200000007.md) for [Pianos](90000045.md).
 
 ## Photos
