Shorten Dings-Names

--- a/90000055.md
+++ b/90000055.md
@@ -1,6 +1,10 @@
-# Whole-Note-Symbol
+# 1-Note-Symbol
 
-A Whole-Note-Symbol is a [Note-Symbol](90000054.md).
+A 1-Note-Symbol is a [Note-Symbol](90000054.md).
+
+## About
+
+- My [Official-Name](611003.md) is [Whole-Note-Symbol](90000055.md).
 
 ## Links
 
