--- a/90000056.md
+++ b/90000056.md
@@ -1,6 +1,10 @@
-# Half-Note-Symbol
+# 2-Note-Symbol
 
-A Half-Note-Symbol is a [Note-Symbol](90000054.md).
+A 2-Note-Symbol is a [Note-Symbol](90000054.md).
+
+## About
+
+- My [Official-Name](611003.md) is [Half-Note-Symbol](90000056.md).
 
 ## Links
 
