--- a/90000057.md
+++ b/90000057.md
@@ -1,6 +1,10 @@
-# Quarter-Note-Symbol
+# 4-Note-Symbol
 
-A Quarter-Note-Symbol is a [Note-Symbol](90000054.md).
+A 4-Note-Symbol is a [Note-Symbol](90000054.md).
+
+## About
+
+- My [Official-Name](611003.md) is [Quarter-Note-Symbol](90000057.md).
 
 ## Links
 
