--- a/90000058.md
+++ b/90000058.md
@@ -1,6 +1,10 @@
-# Eighth-Note-Symbol
+# 8-Note-Symbol
 
-A Eighth-Note-Symbol is a [Note-Symbol](90000054.md).
+A 8-Note-Symbol is a [Note-Symbol](90000054.md).
+
+# About
+
+- My [Official-Name](611003.md) is [Eighth-Note-Symbol](90000058.md).
 
 ## Links
 
