--- a/90000059.md
+++ b/90000059.md
@@ -1,6 +1,10 @@
-# Sixteenth-Note-Symbol
+# 16-Note-Symbol
 
-A Sixteenth-Note-Symbol is a [Note-Symbol](90000054.md).
+A 16-Note-Symbol is a [Note-Symbol](90000054.md).
+
+## About
+
+- My [Official-Name](611003.md) is [Sixteenth-Note-Symbol](90000059.md).
 
 ## Links
 
