--- a/90000060.md
+++ b/90000060.md
@@ -1,6 +1,10 @@
-# Thirty-Second-Note-Symbol
+# 32-Note-Symbol
 
-A Thirty-Second-Note-Symbol is a [Note-Symbol](90000054.md).
+A 32-Note-Symbol is a [Note-Symbol](90000054.md).
+
+## About
+
+- My [Official-Name](611003.md) is [Thirty-Second-Note-Symbol](90000060.md).
 
 ## Links
 
