--- a/8001006.md
+++ b/8001006.md
@@ -5,7 +5,7 @@ The Institut-für-Pharmakogenetik-und-genetische-Disposition is a [Laboratory](6
 ## About
 
 - My [Abbreviation](210000000.md) is [IPgD](8001006.md).
-- My [Seat](670044.md) is in [Hannover](404.md).
+- My [Seat](670044.md) is near to [Hannover](140000091.md).
 - My [Services](600067.md) are [Blood-Tests](800021.md).
 
 ## Links
