--- a/800027.md
+++ b/800027.md
@@ -2,6 +2,10 @@
 
 A Kranken-Kasse is a [Corporation](240000000.md).
 
+## About
+
+- My [Product](600173.md) is [Health-Insurance](800026.md).
+
 ## Links
 
 - Wikipedia: [https://de.wikipedia.org](https://de.wikipedia.org/wiki/Krankenkasse)
