--- a/8001007.md
+++ b/8001007.md
@@ -5,6 +5,7 @@ An Individuelle-Gesundheitsleistung is a [Concept](600011.md) in the [German-Med
 ## About
 
 - My [Abbreviation](210000000.md) is [IGeL](8001007.md).
+- I am a [Concept](600011.md) in the [Gesetzliche-Kranken-Kasse](8001008.md).
 
 ## Links
 
