Improve Definition and add Links

--- a/100000003.md
+++ b/100000003.md
@@ -1,3 +1,8 @@
 # Chemical-Element
 
-A Chemical-Element is an [Atom](60101.md) in a [Chemics-System](10100001.md)
+A Chemical-Element is a [Physics-Atom](10000121.md) in a [Chemics-System](10100001.md)
+
+## Links
+
+- Wikipedia: [https://en.wikipedia.or](https://en.wikipedia.org/wiki/Chemical_element)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q11344)
