--- a/10100007.md
+++ b/10100007.md
@@ -6,6 +6,7 @@ Interleukin-10 is a [Molecule](10100006.md).
 
 - My Abbreviation is [IL-10](10100007).
 - My Abbreviation is [IL10](10100007).
+- I am a [Controler](60185.md) of an [Inflammation-Process](40000073.md).
 
 ## Links
 
