--- a/640042.md
+++ b/640042.md
@@ -1,3 +1,3 @@
 # American-English
 
-American-English is [English](600006.md) spoken in the [USA]().
+American-English is [English](600006.md) spoken in the [USA](141000004.md).
