--- a/71000023.md
+++ b/71000023.md
@@ -5,6 +5,7 @@ First-Draft-of-a-Report-on-the-EDVAC is a [Book](700054.md).
 ## About
 
 - My [Author](600098.md) is [John-von-Neumann](70000061.md).
+- My [Topic](600051.md) is the [EDVAC](201000020.md).
 
 ## Links
 
