--- a/70000061.md
+++ b/70000061.md
@@ -5,3 +5,4 @@ János_Lajo_Neumann is a [Human](40000001.md).
 ## Links
 
 - Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/John_von_Neumann)
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q17455)
