--- a/71000023.md
+++ b/71000023.md
@@ -1,6 +1,6 @@
 # First-Draft-of-a-Report-on-the-EDVAC
 
-First-Draft-of-a-Report-on-the-EDVAC is a [Book](700054.md).
+First-Draft-of-a-Report-on-the-EDVAC is a [Manuscript](700063.md).
 
 ## About
 
