--- a/70000061.md
+++ b/70000061.md
@@ -1,6 +1,6 @@
-# János_Lajo_Neumann
+# János-Lajo_Neumann
 
-János_Lajo_Neumann is a [Human](40000001.md).
+János-Lajo_Neumann is a [Human](40000001.md).
 
 ## Links
 
