--- a/200040035.md
+++ b/200040035.md
@@ -8,4 +8,4 @@ Decoding-Alan-Turing is a [Movie](200300000.md).
 
 ## Links
 
-- IMDb: [https://en.wikipedia.org](https://imdb.com/title/tt1377144)
+- IMDb: [https://imdb.com](https://imdb.com/title/tt1377144)
