--- a/1971091108.md
+++ b/1971091108.md
@@ -2,6 +2,10 @@
 
 My-Pocket-Calculator is the [Pocket-Calculator](20000019.md) that [Michael_Holzheu](0.md) uses in the [Johann-Michael-Sailer-Gymnasium](639003.md).
 
+## About
+
+- My [Manufacturer](600098.md) is [Casio](240000042.md)
+
 ## Pictures
 
 ![Front-Side](400000105.jpg)
