--- a/240000042.md
+++ b/240000042.md
@@ -6,6 +6,7 @@ Casio is a [Corporation](240000000.md).
 
 - My [Official-Name](611003.md) is [Casio Computer Co.](240000042.md)
 - My [Official-Name](611003.md) is [カシオ計算機株式会社](240000042.md)
+- My [Seat](670044.md) is in [Japan](140000087.md)
 - I am a [Manufacturer](600098.md) of [Pocket-Calculators](20000019.md)
 
 ## Links
