--- a/1971091117.md
+++ b/1971091117.md
@@ -2,6 +2,10 @@
 
 My-Casio-PX-S7000BK is a [Casio-PX-S7000](90000064.md).
 
+## About
+
+- My [Serial-Number](611004.md) is 954ADC72K001232AAA.
+
 ## Photos
 
 ![Side View](400000229.jpg)
