--- a/9000176.md
+++ b/9000176.md
@@ -1,3 +1,12 @@
 # Android-Apk-Package
 
 A Android-Apk-Package is an [Install-Package](9000177.md) for [Android](9100003.md).
+
+## About
+
+- My [File-Name-Extension](2000257.md) is "apk".
+
+## Links
+
+- Wikipedia: [ttps://en.wikipedia.org](https://en.wikipedia.org/wiki/Apk_(file_format))
+- Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q596391)
