Fix Abbreviation and File-Name-Extansion

--- a/2000258.md
+++ b/2000258.md
@@ -4,8 +4,8 @@ An iOS-App-Store-Package is an [Install-Package](9000177.md) for [iOs](9100004.m
 
 ## About
 
-- My [Abbreviation](210000000.md) is [IPK-File](2000258.md).
-- My [File-Name-Extension](2000257.md) is "ipk".
+- My [Abbreviation](210000000.md) is [IPA-File](2000258.md).
+- My [File-Name-Extension](2000257.md) is "ipa".
 
 ## Links
 
