--- a/9000176.md
+++ b/9000176.md
@@ -4,6 +4,7 @@ A Android-Apk-Package is an [Install-Package](9000177.md) for [Android](9100003.
 
 ## About
 
+- My [Abbreviation](210000000.md) is [Apk-File](9000176.md).
 - My [File-Name-Extension](2000257.md) is "apk".
 
 ## Links
