--- a/9000176.md
+++ b/9000176.md
@@ -9,5 +9,5 @@ A Android-Apk-Package is an [Install-Package](9000177.md) for [Android](9100003.
 
 ## Links
 
-- Wikipedia: [ttps://en.wikipedia.org](https://en.wikipedia.org/wiki/Apk_(file_format))
+- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Apk_(file_format))
 - Wikidata: [https://wikidata.org](https://wikidata.org/wiki/Q596391)
