--- a/300030007.md
+++ b/300030007.md
@@ -17,7 +17,7 @@ $ /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/
 ## Additional Packages
 
 ```bash
-$ brew install pandoc imagemagick exiftool vim php
+$ brew install pandoc imagemagick exiftool vim php poppler
 ```
 
 ## Configure Bash
@@ -40,7 +40,7 @@ $ cp Work-Dir/13.vimrc ~/.vimrc
 ## Python-Packages
 
 ```bash
-$ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python pcloud exif pyexiftool mutagen pypandoc
+$ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python pcloud exif pyexiftool mutagen pypandoc pdf2image
 ```
 
 ## Install Apache
