--- a/1971091117.md
+++ b/1971091117.md
@@ -5,6 +5,7 @@ My-Casio-PX-S7000BK is a [Casio-PX-S7000](90000064.md).
 ## About
 
 - My [Serial-Number](611004.md) is 954ADC72K001232AAA.
+- My first [Seller](202000004.md) is [Andreas](1971091182.md).
 
 ## Photos
 
