--- a/1971091117.md
+++ b/1971091117.md
@@ -10,3 +10,7 @@ My-Casio-PX-S7000BK is a [Casio-PX-S7000](90000064.md).
 ## Photos
 
 ![Side View](400000229.jpg)
+
+## Links
+
+- Casio-Web-Site: [casio-europe.com](https://casio-europe.com/de/produkte/musikinstrumente/privia-digital-pianos/px-s7000)
