--- a/1971091117.md
+++ b/1971091117.md
@@ -13,4 +13,4 @@ My-Casio-PX-S7000BK is a [Casio-PX-S7000](90000064.md).
 
 ## Links
 
-- Casio-Web-Site: [casio-europe.com](https://casio-europe.com/de/produkte/musikinstrumente/privia-digital-pianos/px-s7000)
+- Casio-Web-Site: [Casio-Europe.com](https://Casio-Europe.com/de/produkte/musikinstrumente/privia-digital-pianos/px-s7000)
