--- a/90000064.md
+++ b/90000064.md
@@ -5,3 +5,7 @@ The Privia-PX-S7000 is an [E-Piano](90000063.md).
 ## About
 
 - My [Manufacturer](600098.md) is [Casio](240000042.md).
+
+## Links
+
+- Casio-Web-Site: [Casio-Europe.com](https://Casio-Europe.com/de/produkte/musikinstrumente/privia-digital-pianos/px-s7000)
