--- a/240100001.md
+++ b/240100001.md
@@ -1,6 +1,14 @@
 # Nicorette
 
-A Nicorette is a [Business-Product]().
+A Nicorette is a [Business-Product](240100000.md).
+
+## About
+
+- My [Manufacturer](60106.md) is [Johnson-and-Johnson](600098.md).
+
+## Parts
+
+- [Nicotine](100000002.md)
 
 ## Links
 
