--- a/100000002.md
+++ b/100000002.md
@@ -1,3 +1,8 @@
 # Nicotine
 
 Nicotione is a [Chemical](100000000.md).
+
+## Links
+
+- Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Nicotine)
+- Wikidata: [Https://Wikidata.Org](https://wikidata.org/wiki/Q28086552)
