--- a/240100001.md
+++ b/240100001.md
@@ -2,6 +2,10 @@
 
 A Nicorette is a [Business-Product](240100000.md).
 
+## Photos
+
+![Spray](400000234.jpg)
+
 ## About
 
 - My [Manufacturer](60106.md) is [Johnson-and-Johnson](600098.md).
