Shorten Dings-Name

--- a/130000044.md
+++ b/130000044.md
@@ -1,6 +1,6 @@
-# Financial-System
+# Finance-System
 
-A Financial-System is an [Economics-System](130000017.md).
+A Finance-System is an [Economics-System](130000017.md).
 
 ## Links
 
