--- a/130000043.md
+++ b/130000043.md
@@ -4,7 +4,7 @@ An Investement-Zertifikat is a [Financial-Product](130000027.md).
 
 ## About
 
-- I am [Part](60084.md) of the [German-Financial-System](404.md).
+- I am [Part](60084.md) of the [German-Finance-System](8040001.md).
 
 ## Links
 
