--- a/70000095.md
+++ b/70000095.md
@@ -2,6 +2,11 @@
 
 Travis_Fimmel is a [Human](40000001.md).
 
+## About
+
+- I am an [Actor](202000010.md) in [Warcraft](200040038.md).
+- I am an [Actor](202000010.md) in [Vikings](200040039.md).
+
 ## Links
 
 - Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Travis_Fimmel)
