--- a/670047.md
+++ b/670047.md
@@ -1,10 +1,6 @@
 # Juristics-Contract
 
-A Juristics-Contract is an [Agreement](600143.md).
-
-## About
-
-- I am [Part](60084.md) of a [Juristics-System](670001.md).
+A Juristics-Contract is a [Contract](600223.md) in a [Juristics-System](670001.md).
 
 ## Links
 
