--- a/1971092007.md
+++ b/1971092007.md
@@ -1,6 +1,6 @@
 # Howto-Configure-Apache-on-Mac
 
-Howto-Configure-Apache-on-Mac is a [Howto](700022.md) for the [Installation](404.md) of [Apache](404.md).
+Howto-Configure-Apache-on-Mac is a [Howto](700022.md) for the [Configuration](9000011.md) of [Apache](2000267.md).
 
 ## Links
 
