--- a/300030007.md
+++ b/300030007.md
@@ -40,6 +40,7 @@ $ cp Work-Dir/13.vimrc ~/.vimrc
 ## Python-Packages
 
 ```bash
+$ sudo apt-get install ffmpeg libsm6 libxext6  -y
 $ pip3 install pytz tzlocal numpy matplotlib bitmath opencv-python pcloud exif pyexiftool mutagen pypandoc pdf2image
 ```
 
