--- a/9200004.md
+++ b/9200004.md
@@ -5,6 +5,7 @@ Hypertext-Transfer-Protocol is a [Network-Protocol](9200003.md).
 ## About
 
 - I am [Part](60084.md) of the [Internet](9200001.md).
+- My [Abbreviation](210000000.md) is [HTTP](9200004.md).
 
 ## Links
 
