Add Definition and Links

--- a/9000129.md
+++ b/9000129.md
@@ -1,3 +1,12 @@
 # Chrome-Web-Browser
 
-The Crome-Web-Browser is ...
+The Crome-Web-Browser is a [Web-Browser](9000128.md).
+
+## About
+
+- My [Creator](600098.md) is [Google](240000009.md).
+
+## Links
+
+- Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Web_browser)
+- Wikidata: [Https://Wikidata.org](https://wikidata.org/wiki/Q6368)
