--- a/9000130.md
+++ b/9000130.md
@@ -1,3 +1,12 @@
 # Safari-Web-Browser
 
-The Safari-Web-Browser is ...
+The Safari-Web-Browser is a [Web-Browser](9000128.md).
+
+## About
+
+- My [Creator](600098.md) is [Apple](240000003.md).
+
+## Links
+
+- Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Safari_(web_browser))
+- Wikidata: [Https://Wikidata.Org](https://www.wikidata.org/wiki/Q35773)
