--- a/9200005.md
+++ b/9200005.md
@@ -6,6 +6,7 @@ Hypertext-Transfer-Protocol-Secure is a [Network-Protocol](9200003.md).
 
 - I am [Part](60084.md) of the [Internet](9200001.md).
 - My [Abbreviation](210000000.md) is [HTTPS](9200005.md).
+- My [Creator](600098.md) is [Netscape](240000044.md).
 
 ## Links
 
