--- a/1971092009.md
+++ b/1971092009.md
@@ -4,7 +4,7 @@ Howto-Install-Https-for-Apache is a [Howto](700022.md) for the [Configuration](9
 
 ## Certificates
 
-- Buy Certificates: [Https://CheapSslSecurity](https://cheapsslsecurity.com)
+- Buy Certificates: [Https://CheapSslSecurity.Com](https://cheapsslsecurity.com)
 
 ## Howtos
 
