--- a/1971092009.md
+++ b/1971092009.md
@@ -1,10 +1,82 @@
 # Howto-Configure-Https-for-Apache
 
-Howto-Install-Https-for-Apache is a [Howto](700022.md) for the [Configuration](9000011.md) of [Https](9200005.md) for [Apache](2000267.md).
+Howto-Install-Https-for-Apache is a [Howto](700022.md) for the [Configuration](9000011.md) of [Https](9200005.md) for [Apache](2000267.md) under [Ubuntu-22.04](9100007.md).
 
 ## Certificates
 
 - Buy Certificates: [Https://CheapSslSecurity.Com](https://cheapsslsecurity.com)
+
+## Create CSR with OpenSSL
+
+Create the [CRS](2000271.md).
+
+- [Https://Www.Df.Eu](https://www.df.eu/de/support/df-faq/ssl-zertifikate/externe-einbindung/csr-erstellen/#accordion-23228)
+- [Https://Knowledge.CheapSslSecurity.Com/](https://knowledge.cheapsslsecurity.com/support/solutions/articles/22000200075-apache-openssl)
+
+```bash
+$ openssl req -new -newkey rsa:2048 -nodes -keyout server.key -out server.csr
+```
+Generating a 2048 bit RSA private key
+..............................+++++
+..................................................+++++
+writing new private key to 'server.key'
+-----
+You are about to be asked to enter information that will be incorporated
+into your certificate request.
+What you are about to enter is what is called a Distinguished Name or a DN.
+There are quite a few fields but you can leave some blank
+For some fields there will be a default value,
+If you enter '.', the field will be left blank.
+-----
+Country Name (2 letter code) []:*de*
+State or Province Name (full name) []:*Baden-Württemberg*
+Locality Name (eg, city) []:*Tübingen*
+Organization Name (eg, company) []:*Michael Holzheu*
+Organizational Unit Name (eg, section) []:
+Common Name (eg, fully qualified host name) []:*dings.site*
+Email Address []:*michael@dings.site*
+
+Please enter the following 'extra' attributes
+to be sent with your certificate request
+A challenge password []:
+```
+
+```bash
+$ ls
+server.csr server.key
+```
+
+### Apache on Ubuntu
+
+- Howto: [https://DigiCert.Com](https://digicert.com/kb/csr-ssl-installation/ubuntu-server-with-apache2-openssl.htm#ssl_certificate_install)
+
+```bash
+$ cat /etc/apache2/sites-available/dings.site-ssl.conf
+<VirtualHost *:443>
+        SSLEngine on
+        SSLCertificateKeyFile /etc/ssl/private/dings_site.key
+        SSLCertificateFile /etc/ssl/certs/dings_site.crt
+        SSLCertificateChainFile /etc/ssl/certs/DigiCertCA.crt
+        ServerAdmin admin@dings.site
+        DocumentRoot /var/www/html/All-Dings
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
+        <Directory /var/www/html/All-Dings>
+            Options Indexes FollowSymLinks
+            AllowOverride All
+            Require all granted
+        </Directory>
+</VirtualHost>
+```
+
+```
+$ sudo a2enmod ssl
+$ sudo a2ensite dings.site-ssl.conf
+$ systemctl reload apache2
+```
+### AWS
+
+- Sicherheits-Gruppe for Https: [Https://Docs.Aws.Amazon.Com](https://docs.aws.amazon.com/de_de/cloudhsm/latest/userguide/ssl-offload-enable-traffic-and-verify-certificate.html)
 
 ## Howtos
 
