--- a/1971092009.md
+++ b/1971092009.md
@@ -46,6 +46,13 @@ $ ls
 server.csr server.key
 ```
 
+### Copy Certificates
+
+```bash
+$ cp dings.site.crt DigiCertCA.crt /etc/ssl/certs/
+$ cp dings.site.key /etc/ssl/private/
+```
+
 ### Apache on Ubuntu
 
 - Howto: [https://DigiCert.Com](https://digicert.com/kb/csr-ssl-installation/ubuntu-server-with-apache2-openssl.htm#ssl_certificate_install)
