--- a/1971092008.md
+++ b/1971092008.md
@@ -58,6 +58,12 @@ extension=curl
 </VirtualHost>
 ```
 
+```bash
+$ sudo a2dissite old-config.conf
+$ sudo a2ensite 000-default.conf
+$ sudo systemctl restart apache2
+```
+
 ## Logs
 
 - /var/log/apache2/error.log
