--- a/1971092009.md
+++ b/1971092009.md
@@ -61,8 +61,8 @@ $ cp dings.site.key /etc/ssl/private/
 $ cat /etc/apache2/sites-available/dings.site-ssl.conf
 <VirtualHost *:443>
         SSLEngine on
-        SSLCertificateKeyFile /etc/ssl/private/dings_site.key
-        SSLCertificateFile /etc/ssl/certs/dings_site.crt
+        SSLCertificateKeyFile /etc/ssl/private/dings.site.key
+        SSLCertificateFile /etc/ssl/certs/dings.site.crt
         SSLCertificateChainFile /etc/ssl/certs/DigiCertCA.crt
         ServerAdmin admin@dings.site
         DocumentRoot /var/www/html/All-Dings
@@ -76,11 +76,17 @@ $ cat /etc/apache2/sites-available/dings.site-ssl.conf
 </VirtualHost>
 ```
 
+```bash
+$ cat /etc/apache2/sites-available# vi 000-default.conf
+Redirect permanent / https://dings.site
 ```
+
+```bash
 $ sudo a2enmod ssl
 $ sudo a2ensite dings.site-ssl.conf
 $ systemctl reload apache2
 ```
+
 ### AWS
 
 - Sicherheits-Gruppe for Https: [Https://Docs.Aws.Amazon.Com](https://docs.aws.amazon.com/de_de/cloudhsm/latest/userguide/ssl-offload-enable-traffic-and-verify-certificate.html)
