Improve Config-File

--- a/1971092009.md
+++ b/1971092009.md
@@ -59,11 +59,16 @@ $ cp dings.site.key /etc/ssl/private/
 
 ```bash
 $ cat /etc/apache2/sites-available/dings.site-ssl.conf
+<VirtualHost *:80>
+        Redirect permanent / https://dings.site
+</VirtualHost>
+
 <VirtualHost *:443>
         SSLEngine on
         SSLCertificateKeyFile /etc/ssl/private/dings.site.key
         SSLCertificateFile /etc/ssl/certs/dings.site.crt
         SSLCertificateChainFile /etc/ssl/certs/DigiCertCA.crt
+        ServerName dings.site
         ServerAdmin admin@dings.site
         DocumentRoot /var/www/html/All-Dings
         ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -74,11 +79,6 @@ $ cat /etc/apache2/sites-available/dings.site-ssl.conf
             Require all granted
         </Directory>
 </VirtualHost>
-```
-
-```bash
-$ cat /etc/apache2/sites-available# vi 000-default.conf
-Redirect permanent / https://dings.site
 ```
 
 ```bash
