--- a/2000272.md
+++ b/2000272.md
@@ -2,6 +2,10 @@
 
 A Domain-Name-System is a [Computer-System](9000153.md).
 
+## About
+
+- My [Abbreviation](210000000.md) is [DNS](2000272.md).
+
 ## Links
 
 - Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Domain_Name_System)
