--- a/2000274.md
+++ b/2000274.md
@@ -2,6 +2,10 @@
 
 A Domain-validated-SSL-Certificate is a [SSL-Certificate](2000270.md).
 
+## About
+
+- I am a [Witness](670034.md) for a [Domain-Name](2000273.md).
+
 ## Links
 
 - Wikipedia: [Https://En.Wikipedia.Org](https://en.wikipedia.org/wiki/Domain-validated_certificate)
