--- a/2000274.md
+++ b/2000274.md
@@ -4,6 +4,7 @@ A Domain-validated-SSL-Certificate is a [SSL-Certificate](2000270.md).
 
 ## About
 
+- My [Abbreviation](210000000.md) is [DV](2000274.md).
 - I am a [Witness](670034.md) for a [Domain-Name](2000273.md).
 
 ## Links
