--- a/70000096.md
+++ b/70000096.md
@@ -4,7 +4,7 @@ Norbert_Blüm is a [Human](40000001.md).
 
 ## About
 
-- I am a [Politician](404.md).
+- I am a [Politician](202000028.md).
 
 ## Links
 
