--- a/21.md
+++ b/21.md
@@ -372,7 +372,7 @@ Bad-Luck for me, because I do not check the [Right-for-Left-Rule](1100000007.md)
 
 Oh Man, obviously this Time I really took it too far and the old [Dream](600050.md) of passing every single [Test](60138.md) in one [Life](60064.md) is History now&nbsp;-&nbsp;Perhaps I should think about a little bit more [Discipline](41000004.md) in the Future.
 
-Unlike my [Driver-Test-Friend](1000001017.md), I never joined the [Bundeswehr](1200000002.md) and therefore I am still a bit uncertain in the Field, but I will try my very Best, promised:
+I am still a bit uncertain in the Field, because unlike my [Driver-Test-Friend](1000001017.md), I never joined the [Bundeswehr](1200000002.md) - But I *really* will try my very Best, promised:
 
 ![Stand still, Dussel!](400000093.jpg)
 
