--- a/21.md
+++ b/21.md
@@ -394,7 +394,7 @@ Greetings to my dear [Mrs-N](1000001002.md) from [our](140100002.md) Landrats-Am
 
 > Dann machen's halt noch schnell den Motorradführerschein neu!
 
-What the Hell, probably I should buy as soon as possible an own [Bike](200500003.md), in Order not to be forced (again) to redo the [Test](60138.md) due to Lack of Driving-Practice.
+What the Hell - Probably I should buy as soon as possible an own [Bike](200500003.md), in Order not to be forced (again) to redo the [Test](60138.md) due to Lack of Driving-Practice.
 
 So Better spend the [Money](6666.md) for Something that is real [Fun](60037.md), in this Sense Greentings to [my](1971091157.md) good old Tractor-Buddy [[0]](#11050) and Biker-Friend [[1]](#11051):
 
