--- a/13300011.md
+++ b/13300011.md
@@ -4,6 +4,7 @@ DigiCert is a [Certificate-Authority](13300010.md).
 
 ## About
 
+- I am a [Corporation](240000000.md).
 - My [Seat](670044.md) is in [Usa](141000004.md).
 
 ## Links
