--- a/1971092009.md
+++ b/1971092009.md
@@ -87,8 +87,9 @@ $ sudo a2ensite dings.site-ssl.conf
 $ systemctl reload apache2
 ```
 
-### AWS
+### AWS/Root
 
+- Root-Login: [Https://TecAdmin.Net](https://tecadmin.net/how-to-enable-ssh-as-root-on-aws-ubuntu-instance)
 - Sicherheits-Gruppe for Https: [Https://Docs.Aws.Amazon.Com](https://docs.aws.amazon.com/de_de/cloudhsm/latest/userguide/ssl-offload-enable-traffic-and-verify-certificate.html)
 
 ## Howtos
