--- a/12.md
+++ b/12.md
@@ -1,3 +1,8 @@
 # Hachti
 
-A colleague from [Michael Holzheu](0.md) who visited the [VCFB-2019]
+Hachti is a [Human](40000001.md).
+
+## About
+
+- I am a [Colleague](180000010.md) of [Michael Holzheu](0.md).
+- I am a [Visitor](404.md) of the [VCFB-2019](404.md).
