--- a/270000031.md
+++ b/270000031.md
@@ -5,8 +5,8 @@ An Employment is a [Directed-Relation](60054.md).
 ## About
 
 - My [Topic](600051.md) is [Work](60036.md).
-- My [Left-Reation-Thing](60090.md) is the [Employee](404.md)
-- My [Right-Reation-Thing](60091.md) is the [Employer](404.md)
+- My [Left-Reation-Thing](60090.md) is the [Employee](270000032.md).
+- My [Right-Reation-Thing](60091.md) is the [Employer](270000033.md).
 
 ## Links
 
