--- a/8020002.md
+++ b/8020002.md
@@ -1,6 +1,6 @@
 # Kraftfahrt-Bundes-Amt
 
-The Kraftfahrt-Bundes-Amt is an [Institution](600097.md) in the [German-System](8000998.md)
+The Kraftfahrt-Bundes-Amt is an [Institution](600097.md) in the [German-System](8000998.md).
 
 ## About
 
