--- a/8040002.md
+++ b/8040002.md
@@ -6,6 +6,7 @@ The Betriebs-Nummer is a [Key](600224.md) in the [German-System](8000998.md).
 
 - I am an [Identity](170000000.md) of an [Employer](270000033.md).
 - I am a [Requirement](60182.md) for a [Mini-Job](800028.md).
+- I am a [Requirement](60182.md) for the [Social-Insurance](141100003.md).
 - My [Provider](600086.md) is the [Bundes-Agentur-für-Arbeit](8020007.md).
 
 ## Links
