--- a/8020008.md
+++ b/8020008.md
@@ -4,7 +4,7 @@ A Berufs-Genossenschaft is an [Institution](600097.md) in the [German-System](80
 
 ## About
 
-- My [Topic](600051.md) is [Accident-Ensurance](404.md)
+- My [Topic](600051.md) is [Accident-Ensurance](141100004.md)
 - My [Topic](600051.md) is [Employment](270000031.md)
 
 ## Links
