--- a/9300000.md
+++ b/9300000.md
@@ -1,3 +1,8 @@
 # Markup-Language
 
-A Markup-Language is ...
+A Markup-Language is a [Language](600041.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Markup_language)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q37045)
