--- a/600041.md
+++ b/600041.md
@@ -1,3 +1,12 @@
 # Language
 
-A Language is ...
+A Language is [System](60052.md) for [Encoding](60079.md).
+
+## About
+
+- I am [Part](60084.md) of a [Communication-System](1000020002.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Language)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q315)
