--- a/270000008.md
+++ b/270000008.md
@@ -1,3 +1,3 @@
 # Human-Creation
 
-I am a [Creation](4600101.md) made by [Humans](40000001.md).
+I am a [Creation](600101.md) made by [Humans](40000001.md).
