Add more Information

--- a/70000046.md
+++ b/70000046.md
@@ -2,6 +2,11 @@
 
 I am a [Human](40000001.md).
 
+## About
+
+- I am the oldest [Son](40000034.md) of [Konrad_Zuse](70000045.md).
+
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Horst_Zuse)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Horst_Zuse)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q92698)
