Add more Information

--- a/70000056.md
+++ b/70000056.md
@@ -2,6 +2,10 @@
 
 I am a [Human](40000001.md).
 
+## About
+
+- I am the oldest [Daughter](40000009.md) of [Konrad_Zuse](70000045.md).
+
 ## Links
 
-- Geni: [https://www.geni.com](https://www.geni.com/people/Lieselotte-Zuse/6000000039345169300)
+- Geni: [Https://Geni.Com](https://geni.com/people/Lieselotte-Zuse/6000000039345169300)
