--- a/70000097.md
+++ b/70000097.md
@@ -4,5 +4,5 @@ I am a [Human](40000001.md).
 
 ## About
 
-- I am the [Editor](404.md) of [Als-die-Computer-Laufen-lernten](404.md).
+- I am the [Editor](404.md) of [Als-die-Computer-Laufen-lernten](71000026.md).
 - I am an [Employee](270000032.md) of the [Zuse-KG](240000020.md).
