--- a/192000008.md
+++ b/192000008.md
@@ -2,6 +2,10 @@
 
 I am a [Web-Site](9000089.md).
 
+## About
+
+- I am a [Successor](60133.md) of [Synchronoptische-Weltgeschichte](71000027.md).
+
 ## Links
 
 - Home-Page: [http://DerDigitalePeters.de](http://DerDigitalepeters.de)
