--- a/71000028.md
+++ b/71000028.md
@@ -4,4 +4,4 @@ I am a [Book](700054.md).
 
 ## About
 
-- My Creator is [Gottfried-Wilhelm_Leibniz](404.md)
+- My Creator is [Gottfried-Wilhelm_Leibniz](70000099.md)
