--- a/71000029.md
+++ b/71000029.md
@@ -6,4 +6,4 @@ I am a [Book](700054.md).
 
 - My [Creator](600098.md) is [Gottfried-Wilhelm_Leibniz](70000099.md).
 - My [Predecessor](404.md) is [De-Progressione-Dyadica](71000028.md).
-- My [Topic](600051.md) is the [Binary-Number-System](404.md).
+- My [Topic](600051.md) is the [Binary-Number-System](12000065.md).
