--- a/71000028.md
+++ b/71000028.md
@@ -5,3 +5,4 @@ I am a [Book](700054.md).
 ## About
 
 - My Creator is [Gottfried-Wilhelm_Leibniz](70000099.md)
+- My [Topic](600051.md) is the [Binary-Number-System](12000065.md).
