Improve Definition and add Links

--- a/30010012.md
+++ b/30010012.md
@@ -1,3 +1,8 @@
 # Portable-Document-Format
 
-I am a [Media-Format](30010000.md) for [Documents](700001.md).
+I am a [Document-Format](30010023.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/PDF)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q42332)
