Improve Definition and add Links

--- a/60119.md
+++ b/60119.md
@@ -1,3 +1,8 @@
 # Pattern-Recognition
 
-I am a [Process](60062.md) of finding [Patterns](60112.md).
+I am a [Search-Process](600091.md) for [Patterns](60112.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Pattern_recognition)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q378859)
