--- a/2000280.md
+++ b/2000280.md
@@ -1,6 +1,6 @@
 # Automatic-Text-Recognition
 
-I am a [Pattern-Recgnition](60119.md) for [Text](404.md).
+I am a [Pattern-Recgnition](60119.md) for [Written-Text](700067.md).
 
 ## About
 
