--- a/2000281.md
+++ b/2000281.md
@@ -4,7 +4,7 @@ I am [Software](9000006.md) for [OCR](2000280.md).
 
 ## About
 
-- My [Creator](600098) is [Hewlet-Packard](404.md).
+- My [Creator](600098) is [Hewlet-Packard](240000048.md).
 
 ## Links
 
