--- a/40000016.md
+++ b/40000016.md
@@ -1,3 +1,3 @@
 # Living-Thing
 
-I am a [Thing](60003.md) that has [Awareness](40000016.md).
+I am a [Thing](60003.md) that has [Awareness](60072.md).
