--- a/31.md
+++ b/31.md
@@ -1,6 +1,11 @@
 # Markdown
 
-The Markdown Language has been created by [John Gruber](30.md) and Aaron Swartz in 2004.
+I am a [Markup-Language](9300000.md).
+
+## About
+
+- My Creator is [John_Gruber](30.md).
+- My Creator is [Aaron_Swartz](404.md).
 
 ## Media-Files
 
@@ -19,3 +24,8 @@ For our [Simple Mouse](404.md) the following Code ...
 ... leads to this Output:
 
 ![Simple Mouse](577.jpg)
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Markdown)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q1193600)
