--- a/9300008.md
+++ b/9300008.md
@@ -1,3 +1,12 @@
 # Mathematical-Markup-Language
 
 I am a [Markup-Language](9300000.md) for [Mathematics](13000000.md).
+
+## About
+
+- My [Abbreviation](210000000.md) is [MathML](9300008.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/MathML)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q823982)
