Mark as Duplicate

--- a/9200013.md
+++ b/9200013.md
@@ -1,7 +1,3 @@
 # Java-Script-Object-Notation
 
-I am a [Markup-Language](9300000.md).
-
-## Links
-
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/JSON)
+This Number-File is no longer maintained, [here](9000194.md) you can find its living Gemini.
