--- a/647005.md
+++ b/647005.md
@@ -1,3 +1,12 @@
 # Islam
 
-I am a [Group](180000000.md) with strong [Belief](600125.md) in the [Coran](71000013.md).
+I am a [Religion](647000.md).
+
+## About
+
+- My [Sacret-Script](14300001.md) is the [Coran](71000013.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Islam)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q432)
