--- a/647010.md
+++ b/647010.md
@@ -1,3 +1,3 @@
 # Zakat
 
-I am [Part](60084.md) of [Five-Pillar-Of-Islam](647006.md).
+I am [Part](60084.md) of [Five-Pillars-Of-Islam](647006.md).
