--- a/647007.md
+++ b/647007.md
@@ -1,3 +1,3 @@
 # Schahada
 
-I am [Part](60084.md) of [Five-Pillars-Of-Islam](647006.md).
+I am [Part](60084.md) of [Five-Pillars-of-Islam](647006.md).
