--- a/647008.md
+++ b/647008.md
@@ -1,3 +1,3 @@
 # Salat
 
-I am [Part](60084.md) of [Five-Pillars-Of-Islam](647006.md).
+I am [Part](60084.md) of [Five-Pillars-of-Islam](647006.md).
