--- a/647011.md
+++ b/647011.md
@@ -1,3 +1,3 @@
 # Hajj
 
-I am [Part](60084.md) of [Five-Pillars-Of-Islam](647006.md).
+I am [Part](60084.md) of [Five-Pillars-of-Islam](647006.md).
