--- a/9000150.md
+++ b/9000150.md
@@ -1,3 +1,13 @@
 # Chat-GPT
 
-I am a [Chat-Bot](404.md).
+I am a [Chat-Bot](9000151.md).
+
+## About
+
+- I am a [LLM](250000041.md).
+- My [Creator](600098.md) is [Open-AI](240000008.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/ChatGPT)
+- Wikidata: [https://WikiData.Org](https://wikidata.org/wiki/Q115564437)
