--- a/250000040.md
+++ b/250000040.md
@@ -6,6 +6,7 @@ I am a [Computer-System](9000153.md).
 
 - My [Topic](600051.md) is [Biologic-Neurologic-System](40000062.md).
 - My [Topic](600051.md) is [AI](250000038.md).
+- My [Topic](600051.md) is [Emergence](60186.md).
 
 ## Links
 
