--- a/600129.md
+++ b/600129.md
@@ -1,3 +1,3 @@
-# Inteligence
+# Intelligence
 
 I am a [Measure](10000021.md) for the [Ability](600103.md) to find [Solutions](600024.md) for [Problems](600029.md).
