--- a/9000152.md
+++ b/9000152.md
@@ -1,3 +1,3 @@
-# Artificial-Inteligence-System
+# Artificial-Intelligence-System
 
-I am a [Computer-System](60052.md) that provides [Aritficial-Inteligence](250000038.md).
+I am a [Computer-System](60052.md) that provides [Aritficial-Intelligence](250000038.md).
