--- a/8020007.md
+++ b/8020007.md
@@ -5,6 +5,8 @@ I am an [Institution](600097.md) in the [German-System](8000998.md).
 ## About
 
 - My [Topic](600051.md) is [Employment](270000031.md).
+- My [Abbreviation](210000000.md) is [BA](8020007.md).
+- My [Abbreviation](210000000.md) is [AA](8020007.md).
 
 ## Links
 
