--- a/13000026.md
+++ b/13000026.md
@@ -1,3 +1,3 @@
 # Mathematics-Equation
 
-I am a [Mathematics-Formula](13000025.md) that makes a [Statement](600078.md ) about [Equality](404.me).
+I am a [Mathematics-Formula](13000025.md) that makes a [Statement](600078.md) about [Equality](404.md).
