--- a/1971091109.md
+++ b/1971091109.md
@@ -1,6 +1,6 @@
 # My-Good-Old-Latex-Book
 
-I am a [Book](700054.md) about [LaTeX](9300010.md), that [I](0.mg) bought during my Studies.
+I am a [Book](700054.md) about [LaTeX](9300010.md), that [I](0.md) bought during my Studies.
 
 ## Photos
 
