--- a/8040007.md
+++ b/8040007.md
@@ -2,6 +2,10 @@
 
 I am a [Digital-Certificate](2000269.md) for [Elster](8040006.md).
 
+## About
+
+- I am a [Requirement](60182.md) for the [SV-Meldeportal](8040005.md).
+
 ## Links
 
 - Elster: [Https://Elster.De](https://elster.de/eportal/unternehmerorientiert/registrierungsprozess)
