--- a/8040007.md
+++ b/8040007.md
@@ -4,6 +4,7 @@ I am a [Digital-Certificate](2000269.md) for [Elster](8040006.md).
 
 ## About
 
+- I am a [Requirement](60182.md) for a [Gewerblicher-Mini-Job](800029.md).
 - I am a [Requirement](60182.md) for the [SV-Meldeportal](8040005.md).
 
 ## Links
