--- a/130000045.md
+++ b/130000045.md
@@ -2,6 +2,10 @@
 
 I am a [Bank](130000041.md).
 
+## About
+
+- My [Abbreviation](210000000.md) is [KfW](130000045.md).
+
 ## Links
 
 - Wikipedia: [Https://De.WikiPedia.Org](https://de.wikipedia.org/wiki/KfW)
