--- a/8040015.md
+++ b/8040015.md
@@ -4,7 +4,7 @@ I am a [Tax](130020003.md) in the [German-System](8000998.md).
 
 ## About
 
-- My [Abbreviation](210000000.md) is [ESt](8040014.md).
+- My [Abbreviation](210000000.md) is [MwSt](8040014.md).
 
 ## Links
 
