--- a/8040016.md
+++ b/8040016.md
@@ -1,12 +1,8 @@
-# Gewerbe-Steuer
+# Handels-Register
 
-I am a [Tax](130020003.md) in the [German-System](8000998.md).
-
-## About
-
-- My [Abbreviation](210000000.md) is [GewSt](8040014.md).
+I am a [Data-Base](2000245.md) in the [German-System](8000998.md).
 
 ## Links
 
-- Wikipedia: [Https://De.WikiPedia.Org](https://de.wikipedia.org/wiki/Gewerbesteuer_(Deutschland))
-- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q1520471)
+- Wikipedia: [Https://De.WikiPedia.Org](https://de.wikipedia.org/wiki/Handelsregister_(Deutschland))
+- Wikidata: [Https://WikiData.Org](https://www.wikidata.org/wiki/Q457703)
