--- a/8040020.md
+++ b/8040020.md
@@ -5,6 +5,7 @@ I am a [Tax](130020003.md) in the [German-System](8000998.md).
 ## About
 
 - My [Abbreviation](210000000.md) is [GewSt](8040014.md).
+- My [Receiver](600076.md) is a [Settlement](140000034.md).
 
 ## Links
 
